fixed the index page spacing issues with the navbar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,7 @@
 #header_full {
     background-color: #ffffff;
     border-bottom: 2px solid #cccccc;
-    height: 100px;
-    position: relative;
+    /* height: 100px; */
 }
 
 body {
@@ -16,9 +15,6 @@ heading hr {
 
 #header_indented {
     width: 960px;
-    margin: auto 20% 0% 23.4%;
-    position: absolute;
-    bottom: 20px;
 }
 
 #header_name {
@@ -26,19 +22,15 @@ heading hr {
     font-family: 'Georgia', Times, Times New Roman, serif;
     color: #ffffff;
     background: #4aaaa5;
-    padding: 20px;
-    position: absolute;
-    bottom: -20px;
+
 }
 
 .main_area {
     width: 960px;
-    /* margin: 10px 20% auto 20%; */
     color: #777777;
     background-color: #ffffff;
     border: 1px solid #dddddd;
-    /* padding-left: 20px;
-    padding-right: 20px; */
+
 }
 
 #fam_pic {
@@ -49,16 +41,6 @@ heading hr {
     border-radius: 8px;
 }
 
-#header_links {
-    /* float: right;
-    position: absolute;
-    bottom: -20px;
-    right: -20px; */
-    /* color: #4aaaa5; */
-    margin-bottom: -30px;
-    margin-right: 20%;
-
-}
 
 #footer {
     height: 50px;
